--- a/CustomerKYC/WebApplication3/Web.config
+++ b/CustomerKYC/WebApplication3/Web.config
@@ -28,5 +28,9 @@
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web"
         preCondition="managedHandler"/>
     </modules>
+    
   </system.webServer>
+  <connectionStrings>
+    <add name="myConnectionString" connectionString="server=localhost;database=myDb;uid=myUser;password=myPass;" />
+  </connectionStrings>
 </configuration>
