--- a/CustomerKYC/WebApplication3/Web.config
+++ b/CustomerKYC/WebApplication3/Web.config
@@ -31,6 +31,6 @@
     
   </system.webServer>
   <connectionStrings>
-    <add name="myConnectionString" connectionString="server=HDRRPA4;database=PrimeBankPOCdb;uid=sa;password=admin@123;" />
+    <add name="myConnectionString" connectionString="server=localhost;database=PrimeBankPOCdb;uid=sa;password=admin@123;" />
   </connectionStrings>
 </configuration>
