--- a/CustomerKYC/WebApplication3/CustomerKyc.csproj
+++ b/CustomerKYC/WebApplication3/CustomerKyc.csproj
@@ -537,7 +537,9 @@
       <DependentUpon>UpdateForm.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="DataFile\" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
