added validations for update form

--- a/CustomerKYC/WebApplication3/CustomerKyc.csproj
+++ b/CustomerKYC/WebApplication3/CustomerKyc.csproj
@@ -546,9 +546,7 @@
       <DependentUpon>update1.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="DataFile1\" />
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
